# LangChain_Experimental_RAG

./: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  011_RAG_DocxLoader_Faiss.ipynb  012_Ollama_DeepSeek-r1_Basic.ipynb  012_Ollama_DeepSeek-r1_Qwen2연동.ipynb  013_LangGraph_Basic.ipynb  014_LangSmith_Basic.ipynb  01_LangChain_ToolCalling.ipynb  05_LangGraph_AgenticRAG.ipynb  05_LangGraph_AgenticRAG_원본.ipynb  0Groq_연동_basic.ipynb  1-1agent_analysis_house.ipynb  2-1agent_analysis_titanic.ipynb  2-2agent_analysis_enhanced.py  22-1Agent_analysis_house_enhanced.ipynb  3multi_agent_crypto.ipynb  4multi_agent_jeju.ipynb  chatbot6_PDF 파일기반 질의응답 챗봇_chroma.ipynb  main_pdf_rag.py  main_pdf_rag_faiss.py  ollama-rag.py  pdf_rag_level1.ipynb  pdf_rag_level2.ipynb  prompt_basic.ipynb  prompt_비교.ipynb  pyproject.toml  test_org.ipynb
00LangchainBasic/: 001_LLMChain생성.ipynb  003-1_PydanticParser.ipynb  003-2_StructuredParser.ipynb  003-3_DatetimeParser.ipynb  004-1_Model_Parameter_Diff.ipynb  005_Gemini활용.ipynb  014_LangSmith_Basic.ipynb  prompt_basic.ipynb
00langchain_basic/: 002_PromptTemplate종류.ipynb  003-4_EnumParser.ipynb  003_OutPutParser종류.ipynb  004_Model_Parameter.ipynb  005_ChatUpstage 활용.ipynb  005_Gemini활용.ipynb  0Groq_연동_basic.ipynb  gradio_groq.py  prompt_비교.ipynb
01RAG/: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  010_RAG_Pipeline_4Chroma_FAISS.ipynb  (+6 more)
(+33 files in other folders)
